joke-list method updated to switch the order of value returned  as 'id','riddle'; yaml file updated as well
